--- a/index.html
+++ b/index.html
@@ -1,3 +1,23 @@
-<body>
-    
-</body>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/css/style.css">
+    </head>
+    <body>
+        <header>
+            <img src="/Assets/icons/lightThemeLogo.svg" class="logoColor">
+            <nav>Menu</nav>
+        </header>
+        
+        <section>Intro</section>
+        <section></section>
+        <script src="script.js" async defer></script>
+    </body>
+</html>
