:file_folder: Added Normalize & base Scss

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <body>
         <header>
             <img src="/Assets/icons/lightThemeLogo.svg" class="logoColor">
-            <nav>Menu</nav>
+            <nav>Menu  Intro  Products</nav>
         </header>
         
         <section>Intro</section>
-        <section></section>
+        <section>Products</section>
+        <footer>Links</footer>
         <script src="script.js" async defer></script>
     </body>
 </html>
