:art: Added seperators to different sections

--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style.css">
-    </head>
-    <body>
-        <header>
-            <img src="/Assets/icons/lightThemeLogo.svg" class="logoColor">
-            <nav>Menu  Intro  Products</nav>
-        </header>
-        
-        <section>Intro</section>
-        <section>Products</section>
-        <footer>Links</footer>
-        <script src="script.js" async defer></script>
-    </body>
+	<head>
+		<meta charset='utf-8' />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title></title>
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="/css/style.css" />
+	</head>
+	<body>
+		<header>
+			<img src="/Assets/icons/lightThemeLogo.svg" class="logoColor" />
+			<nav>Menu Intro Products</nav>
+		</header>
+
+		<section class='introSec'>
+            <h2>Intro</h2></section>
+		<section class='instructionSec'>Så här går det till</section>
+		<section class="productSec">Products</section>
+		<footer>Links</footer>
+		<script src="script.js" async defer></script>
+	</body>
 </html>
