:art:  Added font, navbar and style to sections

--- a/index.html
+++ b/index.html
@@ -9,17 +9,31 @@
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/css/style.css" />
+
+        <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
+
 	</head>
 	<body>
 		<header>
+            <figure>
 			<img src="/Assets/icons/lightThemeLogo.svg" class="logoColor" />
-			<nav>Menu Intro Products</nav>
+        </figure>
+			<nav>
+                <ul>
+                    <li class='navList'><a href="#">Hem</a></li>
+                    <li class='navList'><a href="#">How it works</a></li>
+                    <li class='navList'><a href="#">Products</a></li>
+                    <li class='navList'><a href="#">About us</a></li>
+                </ul>
+            </nav>
 		</header>
 
 		<section class='introSec'>
-            <h2>Intro</h2></section>
-		<section class='instructionSec'>Så här går det till</section>
-		<section class="productSec">Products</section>
+            <h2 class="sectionHeading">Intro</h2></section>
+		<section class='instructionSec'>
+            <h2 class="sectionHeading">Så här går det till</h2></section>
+		<section class="productSec">
+            <h2 class="sectionHeading">Products</h2></section>
 		<footer>Links</footer>
 		<script src="script.js" async defer></script>
 	</body>
