:art: Added section style

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <figure>
 			<img src="/Assets/icons/lightThemeLogo.svg" class="logoColor" />
         </figure>
+            <p class="checkOut">TROLLY</p>
 			<nav>
                 <ul>
                     <li class='navList'><a href="#">Hem</a></li>
@@ -29,11 +30,11 @@
 		</header>
 
 		<section class='introSec'>
-            <h2 class="sectionHeading">Intro</h2></section>
+            <h2 class="sectionHeading"><span class="leftDivider"></span>Intro<span class="rightDivider"></span></h2></section>
 		<section class='instructionSec'>
-            <h2 class="sectionHeading">Så här går det till</h2></section>
+            <h2 class="sectionHeading"><span class="leftDivider"></span>How it works<span class="rightDivider"></span></h2></section>
 		<section class="productSec">
-            <h2 class="sectionHeading">Products</h2></section>
+            <h2 class="sectionHeading"><span class="leftDivider"></span>Products<span class="rightDivider"></span></h2></section>
 		<footer>Links</footer>
 		<script src="script.js" async defer></script>
 	</body>
