🎉 Initialized skeleton layout

--- a/index.html
+++ b/index.html
@@ -3,38 +3,54 @@
 
 <html>
 	<head>
-		<meta charset='utf-8' />
+		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title></title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/css/style.css" />
 
-        <link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<header>
-            <figure>
-			<img src="/Assets/icons/lightThemeLogo.svg" class="logoColor" />
-        </figure>
-            <p class="checkOut">TROLLY</p>
+			<!-- <div class="headingLogo"> -->
+
+				<figure>
+					<img src="/Assets/icons/lightThemeLogo.svg" class="logoColor" />
+                    <h1>Elegant Roses</h1>
+				</figure>
+			<!-- </div> -->
+			<p class="checkOut">TROLLY</p>
 			<nav>
-                <ul>
-                    <li class='navList'><a href="#">Hem</a></li>
-                    <li class='navList'><a href="#">How it works</a></li>
-                    <li class='navList'><a href="#">Products</a></li>
-                    <li class='navList'><a href="#">About us</a></li>
-                </ul>
-            </nav>
+				<ul>
+					<li class="navList"><a href="#">Home</a></li>
+					<li class="navList"><a href="#">Products</a></li>
+					<li class="navList"><a href="#">Contact</a></li>
+					<li class="navList"><a href="#">About us</a></li>
+				</ul>
+			</nav>
 		</header>
 
-		<section class='introSec'>
-            <h2 class="sectionHeading"><span class="leftDivider"></span>Intro<span class="rightDivider"></span></h2></section>
-		<section class='instructionSec'>
-            <h2 class="sectionHeading"><span class="leftDivider"></span>How it works<span class="rightDivider"></span></h2></section>
+		<section class="introSec">
+			<h2 class="sectionHeading">
+				<span class="leftDivider"></span>Intro<span class="rightDivider"></span>
+			</h2>
+		</section>
+		<section class="instructionSec">
+			<h2 class="sectionHeading">
+				<span class="leftDivider"></span>How it works<span
+					class="rightDivider"
+				></span>
+			</h2>
+		</section>
 		<section class="productSec">
-            <h2 class="sectionHeading"><span class="leftDivider"></span>Products<span class="rightDivider"></span></h2></section>
+			<h2 class="sectionHeading">
+				<span class="leftDivider"></span>Products<span
+					class="rightDivider"
+				></span>
+			</h2>
+		</section>
 		<footer>Links</footer>
 		<script src="script.js" async defer></script>
 	</body>
