🔧 Tweak logo and src file source

--- a/index.html
+++ b/index.html
@@ -8,26 +8,33 @@
 		<title></title>
 		<meta name="description" content="" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 
-        <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap" rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<header>
 			<!-- <div class="headingLogo"> -->
 
-				<figure>
-					<img src="/Assets/icons/lightThemeLogo.svg" class="logoColor" />
-                    <h1>Elegant Roses</h1>
-				</figure>
+			<figure>
+				<img src="Assets/icons/lightThemeLogo.svg" class="logoColor" />
+				<h1>Elegant Roses</h1>
+			</figure>
 			<!-- </div> -->
-			<p class="checkOut">TROLLY</p>
+			<p class="checkOutProd">TROLLY</p>
+			<p class="checkOutAmount">PRICE</p>
 			<nav>
 				<ul>
 					<li class="navList"><a href="#">Home</a></li>
 					<li class="navList"><a href="#">Products</a></li>
 					<li class="navList"><a href="#">Contact</a></li>
-					<li class="navList"><a href="#">About us</a></li>
+					<li class="navSearch">
+						<span class="searchIcon">Search</span
+						><input type="text" placeholder="Search roses" />
+					</li>
 				</ul>
 			</nav>
 		</header>
@@ -46,10 +53,11 @@
 		</section>
 		<section class="productSec">
 			<h2 class="sectionHeading">
-				<span class="leftDivider"></span>Products<span
-					class="rightDivider"
-				></span>
+				<span class="leftDivider"></span>Products<span>class="rightDivider"></span>
 			</h2>
+            <div class="productSecContainer">
+
+            </div>
 		</section>
 		<footer>Links</footer>
 		<script src="script.js" async defer></script>
