:art: Styke to navbar and intro section

--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
 				<h1>Elegant Roses</h1>
 			</figure>
 			<!-- </div> -->
-			<p class="checkOutProd">TROLLY</p>
-			<p class="checkOutAmount">PRICE</p>
+			<!-- <p class="checkOutProd">TROLLY</p>
+			<p class="checkOutAmount">PRICE</p> -->
 			<nav>
-				<ul>
-					<li class="navList"><a href="#">Home</a></li>
-					<li class="navList"><a href="#">Products</a></li>
-					<li class="navList"><a href="#">Contact</a></li>
-					<li class="navSearch">
+                <button class="navButtonCart"><img src="Assets/icons/shopping-cart-icon.svg" alt="" width="30px" height="30px"></button>
+                <input type="text">
+                <button class="navButtonMenu"><img src="Assets/icons/burgerMenu.svg" alt="" width="30px" height="30px"></button>
+				<!-- <ul>
+					<li class="navList"><a href="#">Cart</a></li>
+					<li class="navList"><a href=""><input type="text" placeholder="Search roses" /></a></li>
+					<li class="navList"><a href="#">Contact</a></li> -->
+					<!-- <li class="navSearch">
 						<span class="searchIcon">Search</span
 						><input type="text" placeholder="Search roses" />
-					</li>
-				</ul>
+					</li> -->
+				<!-- </ul> -->
 			</nav>
 		</header>
 
@@ -43,6 +46,20 @@
 			<h2 class="sectionHeading">
 				<span class="leftDivider"></span>Intro<span class="rightDivider"></span>
 			</h2>
+            <div class="reviewsContainer">
+                <article class="reviews">
+                    HEJ
+                </article>
+                <article class="reviews">
+                    TJA
+                </article>
+                <article class="reviews">
+                    HALLÅ
+                </article>
+                <article class="reviews">
+                    DÄR
+                </article>
+            </div>
 		</section>
 		<section class="instructionSec">
 			<h2 class="sectionHeading">
@@ -53,9 +70,9 @@
 		</section>
 		<section class="productSec">
 			<h2 class="sectionHeading">
-				<span class="leftDivider"></span>Products<span>class="rightDivider"></span>
+				<span class="leftDivider"></span>Products<span class="rightDivider"></span>
 			</h2>
-            <div class="productSecContainer">
+            <div class="productContainer">
 
             </div>
 		</section>
