🔧 Adjustment to image linking

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<div class="reviewsContainer">
 				<article class="reviews">
 					<img
-						src="/Assets/Images/Reviews/Review1.jpg"
+						src="../Assets/Images/Reviews/Review1.jpg"
 						alt="girl holding box of flowers"
 						height="300"
 						width="300"
