:art: Style to footer and instruciton sections

--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
 					class="rightDivider"
 				></span>
 			</h2>
+			<ul class="instructionList">
+				<li><img src="Assets/icons/2Choose.png" alt="" width="100" height="100"></li>
+				<li><h3>First, Choose the products that represent your eternal love</h3><p>We have roses of all sorts, </p></li>
+			</ul>
+
 		</section>
 
 		<section class="reviewSec">
@@ -204,26 +209,23 @@
 		<footer>
 			<ul>
 				
-				<li><h3>About ElegantRoses AB </h3></li>
+				<li><h3>About ElegantRoses</h3></li>
 				<li><a href="#">Environmental policy</a></li>
 				<li><a href="#">Our roses</a></li>
-				<li><a href="#">Available jobs</a></li>
+				<li><a href="#">Job openings</a></li>
 				<li><a href="#">Follow our journey</a></li>
 			</ul>
 			<ul>
-				<li><h3>Customer care</h3></li>
+				<li><h3>Customer support</h3></li>
 				<li><a href="#">T&C</a></li>
 				<li><a href="#">Payment</a></li>
 				<li><a href="#">Contact us</a></li>
-				<li><a href="#">Test</a></li>
 			</ul>
-			<!-- <ul>
-				<li><h3>Customer care</h3></li>
-				<li>Payment</li>
-				<li>Contact us</li>
-				<li>Test</li>
-				<li>Test</li>
-			</ul> -->
+			<div>
+				<p>Elegant Roses 2023</p>
+				<img src="Assets/icons/FooterLogo.svg" alt="" width="100" height="64">
+				<p>All Rights Reserved</p>
+			</div>
 		</footer>
 
 		<script src="script.js" async defer></script>
