✨ Add/Remove feature from cart and summary

--- a/index.html
+++ b/index.html
@@ -54,76 +54,75 @@
 						<li><h3>Product</h3></li>
 						<li><h3>Price</h3></li>
 						<li><h3>Amount</h3></li>
-						
 					</ul>
 					<div class="productPreviewSummary">
-					<ul>
-						<li>
-							<img
-								class="productPreviewImage"
-								src="Assets/Images/Products/Akryl.jpg"
-								width="50"
-								height="50"
-							/>
-						<!-- </li>
-						<li> -->
-							<h3 class="previewProductTitle">Test1</h3>
-						<!-- </li>
-						<li> -->
-							<li><p class="previewProductPrice">2590 SEK</p></li>
-						<!-- </li> -->
-						<li class="productAmountActions">
-							<button class="productAmountSub">-</button
-							><input class="productAmount" type="number" /><button
-								class="productAmountAdd"
-							>
-								+
-							</button>
-							<button class="previewProductRemoval">
+						<ul>
+							<li>
 								<img
-									src="Assets/icons/trashcan.svg"
-									alt=""
-									width="15px"
-									height="15px"
+									class="productPreviewImage"
+									src="Assets/Images/Products/Akryl.jpg"
+									width="50"
+									height="50"
 								/>
-							</button>
-						</li>
-					<!-- </ul>
+								<h3 class="previewProductTitle">Test1</h3>
+							</li>
+
+							<li><p class="previewProductPrice">2590 SEK</p></li>
+
+							<li class="productAmountActions">
+								<button class="productAmountSub">-</button
+								><input class="productAmount" type="number" /><button
+									class="productAmountAdd"
+								>
+									+
+								</button>
+								<button class="previewProductRemoval">
+									<img
+										src="Assets/icons/trashcan.svg"
+										alt=""
+										width="15px"
+										height="15px"
+									/>
+								</button>
+							</li>
+							<!-- </ul>
 
 
 					<ul class="productPreviewSummary"> -->
-						<li>
-							<img
-								class="productPreviewImage"
-								src="Assets/Images/Products/Akryl.jpg"
-								width="50"
-								height="50"
-							/>
-						<!-- </li>
-						<li> -->
-							<h3 class="previewProductTitle">Test1</h3>
-						<!-- </li>
-						<li> -->
-							<li><p class="previewProductPrice">2590 SEK</p></li>
-						<!-- </li> -->
-						<li class="productAmountActions">
-							<button class="productAmountSub">-</button
-							><input class="productAmount" type="number" /><button
-								class="productAmountAdd"
-							>
-								+
-							</button>
-							<button class="previewProductRemoval">
+							<li>
 								<img
-									src="Assets/icons/trashcan.svg"
-									alt=""
-									width="15px"
-									height="15px"
+									class="productPreviewImage"
+									src="Assets/Images/Products/Akryl.jpg"
+									width="50"
+									height="50"
 								/>
-							</button>
-						</li>
-					</ul>
-				</div>
+								<!-- </li>
+						<li> -->
+								<h3 class="previewProductTitle">Test1</h3>
+								<!-- </li>
+						<li> -->
+							</li>
+
+							<li><p class="previewProductPrice">2590 SEK</p></li>
+							<!-- </li> -->
+							<li class="productAmountActions">
+								<button class="productAmountSub">-</button
+								><input class="productAmount" type="number" /><button
+									class="productAmountAdd"
+								>
+									+
+								</button>
+								<button class="previewProductRemoval">
+									<img
+										src="Assets/icons/trashcan.svg"
+										alt=""
+										width="15px"
+										height="15px"
+									/>
+								</button>
+							</li>
+						</ul>
+					</div>
 					<button class="checkoutBtn">Proceed to checkout</button>
 				</div>
 				<input type="text" class="navSearchBar" />
@@ -185,16 +184,16 @@
 					<img src="Assets/icons/Filter.svg" alt="" height="30" width="50" />
 				</button>
 				<div class="sortMenu toggleHide">
-				<!-- <div class="sortMenu"> -->
+					<!-- <div class="sortMenu"> -->
 					<p>Sort on:</p>
-					<label for="range" >Price</label>
+					<label for="range">Price</label>
 					<input type="range" />
 
 					<select name="sorting" id="sorting">
 						<option value="fprice">Price falling</option>
 						<option value="rprice">Price rising</option>
-						<option value="Blue category">Blue category</option>
-						<option value="red category">Audi</option>
+						<option value="Bluecategory">Blue category</option>
+						<option value="redcategory">red catogory</option>
 					</select>
 					<label for="sorting">Rose color</label>
 
@@ -206,20 +205,19 @@
 					</select>
 					<p>Select rose color category</p>
 					<label for="blue">Blue</label>
-					<input type="radio" name="category">
+					<input type="radio" name="category" />
 					<label for="red">Red</label>
-					<input type="radio" name="category">
+					<input type="radio" name="category" />
 					<label for="yellow">Yellow</label>
-					<input type="radio" name="category">
+					<input type="radio" name="category" />
 					<label for="pink">Pink</label>
-					<input type="radio" name="category">
+					<input type="radio" name="category" />
 
 					<p>Select box Shape category</p>
 					<label for="square">Square</label>
-					<input type="radio" name="category">
+					<input type="radio" name="category" />
 					<label for="round">Round</label>
-					<input type="radio" name="category">
-	
+					<input type="radio" name="category" />
 				</div>
 
 				<div class="productContainer">
@@ -249,7 +247,6 @@
 
 
 					</article> -->
-
 				</div>
 			</section>
 
@@ -331,9 +328,7 @@
 							height="300"
 							width="300"
 						/>
-						<h3>
-							"The flower box exceeded all expectations – pure elegance."
-						</h3>
+						<h3>"The flower box exceeded all expectations – pure elegance."</h3>
 					</article>
 					<article class="reviews">
 						<img
@@ -342,9 +337,7 @@
 							height="300"
 							width="300"
 						/>
-						<h3>
-							"Beautifully arranged flowers, a gift that speaks volumes."
-						</h3>
+						<h3>"Beautifully arranged flowers, a gift that speaks volumes."</h3>
 					</article>
 					<article class="reviews">
 						<img
@@ -353,9 +346,7 @@
 							height="300"
 							width="300"
 						/>
-						<h3>
-							"An elegant touch to any occasion – the perfect gift."
-						</h3>
+						<h3>"An elegant touch to any occasion – the perfect gift."</h3>
 						<!-- <p>-A poor soul</p> -->
 					</article>
 					<article class="reviews">
@@ -533,7 +524,7 @@
 		</section>
 
 		<section class="orderConfirmation toggleHide">
-		<!-- <section class="orderConfirmation toggleHide"> -->
+			<!-- <section class="orderConfirmation toggleHide"> -->
 			<h2 class="sectionHeading">
 				<span class="leftDivider"></span>Order confirmation<span
 					class="rightDivider"
@@ -559,8 +550,8 @@
 						<p class="ProductCheckoutPrice">2590 SEK</p>
 						<p class="productAmount">7</p>
 					</li>
-					<li><p  class="orderTotalCost">Your total cost: {JS}</p></li>
-					<li><p  class="orderTotalPcs">Total PCS: {JS}</p></li>
+					<li><p class="orderTotalCost">Your total cost: {JS}</p></li>
+					<li><p class="orderTotalPcs">Total PCS: {JS}</p></li>
 				</ul>
 			</div>
 		</section>
