🔧 Adjustment to increase/decrease amount in cart

--- a/index.html
+++ b/index.html
@@ -366,11 +366,13 @@
 		</div>
 		<!-- <div class="checkoutWrapper"> -->
 		<section class="checkoutWrapper toggleHide">
+			
 			<h2 class="sectionHeading">
 				<span class="leftDivider"></span>Checkout<span
 					class="rightDivider"
 				></span>
 			</h2>
+			<button class="continueShopping"><img src="/Assets/icons/leftArrow.svg" alt="arrow pointing left" width="50" height="50">Continue shopping</button>
 			<div class="checkoutSec">
 				<h3>Order Summary</h3>
 				<div>
